--- a/hu/kapcsolat.html
+++ b/hu/kapcsolat.html
@@ -37,7 +37,7 @@
                                                         <ul class="third-level-navbar-ragasztott-hu">
                                                                 <li><a href="./Termekek/Ragasztott/gerendak.html">Építkezési gerendák</a></li>
                                                                 <li><a href="./Termekek/Ragasztott/homlokzat.html">Homlokzat</a></li>
-                                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és deking</a></li>
+                                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és decking</a></li>
                                                                 <li><a href="./Termekek/Ragasztott/padlo.html">Padló elemek</a></li>
                                                         </ul>
                                                 </li>
