--- a/hu/index.html
+++ b/hu/index.html
@@ -37,7 +37,7 @@
                                                         <ul class="third-level-navbar-ragasztott-hu">
                                                                 <li><a href="./Termekek/Ragasztott/gerendak.html">Építkezési gerendák</a></li>
                                                                 <li><a href="./Termekek/Ragasztott/homlokzat.html">Homlokzat</a></li>
-                                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és deking</a></li>
+                                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és decking</a></li>
                                                                 <li><a href="./Termekek/Ragasztott/padlo.html">Padló elemek</a></li>
                                                         </ul>
                                                 </li>
@@ -84,7 +84,7 @@
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">4 / 7</div>
                                                         <img src="../images/terasa-salcam1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Deking</a></div>
+                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">decking</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
