--- a/hu/index.html
+++ b/hu/index.html
@@ -61,7 +61,7 @@
                 <div class="content-box">
                         <div class="row">
                                 <div class="columngallery1">
-                                        <h2>Bemutató:</h1>
+                                        <h2>Bemutató:</h2>
                                         <div class="slideshow-container">
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">1 / 7</div>
@@ -126,7 +126,7 @@
                                                 <p>Cégünk több mint 18 éve készít kiváló minőségű akác-, csere- és fenyőtermékeket.</p>
                                                 <p>Rengeteg tapasztalattal rendelkezünk, aminek ön is hasznát veheti!</p>
                                                 <p>Akár egyedi felhasználásra is kínálunk kiváló minőségű akác-, csere- és fenyőtermékeket.</p>
-                                                <p>Továbbá akár játszoterek építéséhez, kültéri berendezések vagy akár mezőgazdaságban is felhasználható elemeket biztosítunk.</p>
+                                                <p>Továbbá akár játszóterek építéséhez, kültéri berendezések vagy akár mezőgazdaságban is felhasználható elemeket biztosítunk.</p>
                                                 <p>Termékeinket FSC tanusítvánnyal is szállítjuk!</p>
                                         </div>
                                 </div>
