--- a/hu/katalogus.html
+++ b/hu/katalogus.html
@@ -8,9 +8,10 @@
                 <meta property="og:description" content="Erdélyi faipari magánvállalkozás, az Alexander kft.">
                 <meta property="og:title" content="Alexander kft.">
                 <meta property="og:url" content="https://alexander-sic.com">
-                <meta name="keywords" content="akác, csere, fenyő, ragasztott fa, gerenda, homlokzat, terasz, decking, padló, parkett, gömbfa, tüzifa">
+                <meta name="keywords" content="faház, ház, gömbfaház, rusztikus ház, akác, csere, fenyő, ragasztott fa, gerenda, homlokzat, terasz, decking, padló, parkett, gömbfa, tüzifa">
                 <link rel="icon" href="../favicon.ico" type="image/x-icon">
                 <link rel="stylesheet" type="text/css" href="../Style/stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../Style/navbar.css" media="screen">
         </head>
 
         <body>
@@ -29,6 +30,62 @@
                 </div>
 
                 <div class="navbar">
+                        <nav id="menu">
+                                <label for="tm" id="toggle-menu">Menu<span class="drop-icon">▾</span></label>
+                                <input type="checkbox" id="tm">
+                                <ul class="main-menu clearfix">
+                                        <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Főoldal</a>
+                                        <li><a href="#">Termékeink
+                                        <span class="drop-icon">▾</span>
+                                        <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
+                                        </a>
+                                        <input type="checkbox" id="sm1">
+                                        <ul class="sub-menu">
+                                        <!-- <li><a href="#">Item 2.1</a></li> -->
+                                        <li><a href="#">Ragasztott elemek
+                                                <span class="drop-icon">▾</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                        </a>
+                                        <input type="checkbox" id="sm2">
+                                        <ul class="sub-menu">
+                                                <li><a href="./Termekek/Ragasztott/gerendak.html">Építkezési gerendák</a></li>
+                                                <li><a href="./Termekek/Ragasztott/homlokzat.html">Homlokzat</a></li>
+                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és decking</a></li>
+                                                <li><a href="./Termekek/Ragasztott/padlo.html">Padló elemek</a></li>
+                                        </ul>
+                                        </li>
+                        
+                                        <li><a href="#">Gömb fa
+                                                <span class="drop-icon">▾</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                        </a>
+                                        <input type="checkbox" id="sm2">
+                                        <ul class="sub-menu">
+                                                <li><a href="./Termekek/Gomb/gombfa.html">Építkezési- és szabadtéri elemek</a></li>
+                                        </ul>
+                                        </li>
+
+                                        <li><a href="#">Faházak
+                                                <span class="drop-icon">▾</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                        </a>
+                                        <input type="checkbox" id="sm2">
+                                        <ul class="sub-menu">
+                                                <li><a href="#">Faházak1</a></li>
+                                                <li><a href="#">Faházak2</a></li>
+                                        </ul>
+                                        </li>
+                                        <!-- <li><a href="#">Item 3.4</a></li> -->
+                                        </ul>
+                                </li>
+                                        <li><a href="./katalogus.html">Katalógus</a></li>
+                                        <li><a href="./kapcsolat.html">Elérhetőség</a></li>
+                                        <!-- <li><a href="#">Another Sample</a></li> -->
+                                </ul>
+                        </nav>
+                </div>
+
+                <!-- <div class="navbar">
                         <ul class="top-level-navbar-hu">
                                 <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Főoldal</a></li>
                                 <li><a href="#">Termékeink</a>
@@ -56,7 +113,7 @@
                                 <li><a href="./katalogus.html">Katalógus</a></li>
                                 <li><a href="./kapcsolat.html">Elérhetőség</a></li>
                         </ul>
-                </div>
+                </div> -->
                 
                 <div class="content-box">
                         <article>
