Navigation bar update
Fixed issues with navigation bar on touch devices.

--- a/hu/Termekek/Fahazak/fahazak.html
+++ b/hu/Termekek/Fahazak/fahazak.html
@@ -56,20 +56,20 @@
                                     </li>
                     
                                     <li><a href="#">Gömb fa
-                                            <span class="drop-icon">▾</span>
-                                            <label title="Toggle Drop-down" class="drop-icon" for="sm2">&#9662;</label>
+                                            <span class="drop-icon">&#9662;</span>
+                                            <label title="Toggle Drop-down" class="drop-icon" for="sm3">&#9662;</label>
                                     </a>
-                                    <input type="checkbox" id="sm2">
+                                    <input type="checkbox" id="sm3">
                                     <ul class="sub-menu">
                                             <li><a href="../../Termekek/Gomb/gombfa.html">Építkezési- és szabadtéri elemek</a></li>
                                     </ul>
                                     </li>
 
                                     <li><a href="#">Faházak
-                                            <span class="drop-icon">▾</span>
-                                            <label title="Toggle Drop-down" class="drop-icon" for="sm2">&#9662;</label>
+                                            <span class="drop-icon">&#9662;</span>
+                                            <label title="Toggle Drop-down" class="drop-icon" for="sm4">&#9662;</label>
                                     </a>
-                                    <input type="checkbox" id="sm2">
+                                    <input type="checkbox" id="sm4">
                                     <ul class="sub-menu">
                                             <li><a href="../../Termekek/Fahazak/fahazak.html">Faházak bemutató</a></li>
                                             <!-- <li><a href="#">Faházak2</a></li> -->
