--- a/hu/katalogus.html
+++ b/hu/katalogus.html
@@ -31,20 +31,20 @@
 
                 <div class="navbar">
                         <nav id="menu">
-                                <label for="tm" id="toggle-menu">Menu<span class="drop-icon">▾</span></label>
+                                <label for="tm" id="toggle-menu">Menu<span class="drop-icon">&#9662;</span></label>
                                 <input type="checkbox" id="tm">
                                 <ul class="main-menu clearfix">
                                         <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Főoldal</a>
                                         <li><a href="#">Termékeink
-                                        <span class="drop-icon">▾</span>
-                                        <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
+                                        <span class="drop-icon">&#9662;</span>
+                                        <label title="Toggle Drop-down" class="drop-icon" for="sm1">&#9662;</label>
                                         </a>
                                         <input type="checkbox" id="sm1">
                                         <ul class="sub-menu">
                                         <!-- <li><a href="#">Item 2.1</a></li> -->
                                         <li><a href="#">Ragasztott elemek
-                                                <span class="drop-icon">▾</span>
-                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                                <span class="drop-icon">&#9662;</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">&#9662;</label>
                                         </a>
                                         <input type="checkbox" id="sm2">
                                         <ul class="sub-menu">
@@ -56,20 +56,20 @@
                                         </li>
                         
                                         <li><a href="#">Gömb fa
-                                                <span class="drop-icon">▾</span>
-                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                                <span class="drop-icon">&#9662;</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm3">&#9662;</label>
                                         </a>
-                                        <input type="checkbox" id="sm2">
+                                        <input type="checkbox" id="sm3">
                                         <ul class="sub-menu">
                                                 <li><a href="./Termekek/Gomb/gombfa.html">Építkezési- és szabadtéri elemek</a></li>
                                         </ul>
                                         </li>
 
                                         <li><a href="#">Faházak
-                                                <span class="drop-icon">▾</span>
-                                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                                                <span class="drop-icon">&#9662;</span>
+                                                <label title="Toggle Drop-down" class="drop-icon" for="sm4">&#9662;</label>
                                         </a>
-                                        <input type="checkbox" id="sm2">
+                                        <input type="checkbox" id="sm4">
                                         <ul class="sub-menu">
                                                 <li><a href="#">Faházak1</a></li>
                                                 <li><a href="#">Faházak2</a></li>
