--- a/hu/index.html
+++ b/hu/index.html
@@ -35,8 +35,10 @@
                                 <input type="checkbox" id="tm">
                                 <ul class="main-menu clearfix">
                                         <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Főoldal</a>
-                                        <li><a href="#">Termékeink<span class="drop-icon">&#9662;</span></a>
+                                        <li><a href="#">Termékeink
+                                        <span class="drop-icon">&#9662;</span>
                                         <label title="Toggle Drop-down" class="drop-icon" for="sm1">&#9662;</label>
+                                        </a>
                                         <input type="checkbox" id="sm1">
                                         <ul class="sub-menu">
                                         <!-- <li><a href="#">Item 2.1</a></li> -->
