--- a/ro/Produse/Lipite/podele.html
+++ b/ro/Produse/Lipite/podele.html
@@ -19,6 +19,7 @@
                                         <li style="display: inline;"><a href="../../../hu/Termekek/Ragasztott/padlo.html" style="color: #fffaec;">HU /</a></li>
                                         <li style="display: inline;"><a href="../../index.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
+                                <img src="../../../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
                         </div>
 
                         <div class="logo">
