--- a/ro/contact.html
+++ b/ro/contact.html
@@ -19,6 +19,7 @@
                                         <li style="display: inline;"><a href="../hu/kapcsolat.html" style="color: #fffaec;">HU /</a></li>
                                         <li style="display: inline;"><a href="./contact.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
+                                <img src="../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
                         </div>
 
                         <div class="logo">
